; ModuleID = '/home/carl/AnghaBench/redis/src/extr_module.c_RM_ZsetLastInScoreRange.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_module.c_RM_ZsetLastInScoreRange.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @RM_ZsetLastInScoreRange(i32* %0, double %1, double %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca double, align 8
  %8 = alloca double, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store double %1, double* %7, align 8
  store double %2, double* %8, align 8
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %11 = load i32*, i32** %6, align 8
  %12 = load double, double* %7, align 8
  %13 = load double, double* %8, align 8
  %14 = load i32, i32* %9, align 4
  %15 = load i32, i32* %10, align 4
  %16 = call i32 @zsetInitScoreRange(i32* %11, double %12, double %13, i32 %14, i32 %15, i32 0)
  ret i32 %16
}

declare dso_local i32 @zsetInitScoreRange(i32*, double, double, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
